# nftbk

./: .clinerules  .dockerignore  .env.caddy.example  .env.example  .env.postgres.example  .gitignore  API_DOCUMENTATION.md  Caddyfile  Caddyfile.template  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  backup_metadata_storage_research.md  build.rs  config.example.toml  config.toml.example  config_chains.toml  deny.toml  docker-compose.yml  example_config.toml  example_config_auth.toml  example_config_chains.toml  example_config_ipfs.toml  example_config_jwt.toml  example_config_privy.toml  example_config_tokens.toml  fly.toml  podman-compose.postgres.yml  podman-compose.yml
.cargo/: audit.toml
.cursor/rules/: general.mdc  markdown.mdc  rust.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.sqlx/: query-0226bb1c9006d2353383181fdaecb04a87cacb2c18fa69cc8823786543d6d4fa.json  query-047d8e8920f0e70eac72d8ba5960e57eaf7e27052bc4445d0bc833e2ca9bd764.json  query-088773c29f22b26de320126306acbe3ca36383a0a6ee3de4333e79c8868909f2.json  query-14869f32cb27f4a222d8f28b541b8cbec461ca83b3eaa426076ed4d3b8992706.json  query-250eed78719e80f483dad97bb55d544d2172e180d2bedf93ddfeb170212e05c0.json  query-266e49d40ada7d8ae311d97ad51b67d924955239d5e1a43df393a7e50717ea12.json  query-2691afab655a66753c757061543437921e2aa80a832a77b75e3c1559ff8e8a77.json  query-296a28905d0da856d7b7ea7572450938d4ed817e8ea1217367f9b3b27d2d5e3e.json  query-30c4c6d435c69f2dff21b1c62875b5dd50e6350a772b3aa615e8adfc83729bcc.json  query-336786604000af39418e59128c613d4d211da9e133c838fd083b25f941e3d109.json  query-365d32697de1d0cf71d38435e97a6920aa07598c67c7c0345121cccca2145f89.json  query-45d0d762c881015338b66128d7a3f074c969e2b87b83df2c452afcd4ec69481a.json  query-4887bcbbf31912905c89e393b8f778a4fd45be39e064f44d89ea685beda3b3e4.json  query-51d27fa3d008cf464846aaa157b815b733bc69628ce677f545c5869a5c68a8fc.json  query-51ff6e2be762c6ba5deda13ead35a1bd8699934da0147c0b7d18298fae2ef3a5.json  query-529132181ca0e8c7bab17f57396ac87da3405041d389462c43848bd6a319755d.json  query-5311a9b3feea8f60a8a9c56755b6568dbf369edcde85de7def24738ccfc3d736.json  query-577e702f15b3a5ba32aacc95c7b18a3004f6e8d210c5af6a4d39154308785d91.json  query-5a001f914b660c31980dc6ea6b6b3cf95cbc4218a4c78c487913e6ce2e679c45.json  query-5a8580ac5ef98a024004331d64b7101a2ef8df4b86661e171485469f3cbebf26.json  query-5ae10ebc08f766ef4c65bf5f6559451c48bbc0dc897c420b2a7f1d377302d3f6.json  query-5c89a79b2ddf5f4510ed235b31697c20cc6a1cee628c5915840ccf059bb2898b.json  query-5ca75042aa2d7a290b68e6823039677e45a09c9e30cc38f51b8de1f9951ea067.json  query-5f920ba7b046f6fa9cacd9f8dae9934b7a72aa13aa1911753e49b1bb3a9cb61e.json  query-6539007edd60486ebb377d01595dec9aa711048c2f7190e3115cab301edd0b71.json  query-6897d0c9c1e2d6457be55915dde7261fe1775c0ae9187567bc7d34912907d9a0.json  query-716ef5ff3d9066f53d2df0f5bcbbd0235113cf7e3c039d998ce7694b03a348a5.json  query-7672d0f819ef0e998866f6b1e7b87f3dffee19c1bfce991ba796fdd73a1b7725.json  query-7b9415ef09cda28acaae2bdb6e73bd982a20ce937144498d455877d115fc3eaa.json  query-7c2551b54bbd155df146cdf2c22386db0675005ce6841e490b73049534217512.json  query-7d74c1669021eb2d6f125ae9969a1cf31c7ba4f8bedfad8781452d7ad14f0d8c.json  query-81314a57705b2abf732674bbd97d52c7dc1c820666553de8e61da6ad0ad42192.json  query-882096a7ccb8e2aa6398ed4d1b9b9387a0c60dd3e7bd734d994c0525f45e3f88.json  query-8e0e1aed3631d171842091cb8a7ac815334599280c64343c479971607998678f.json  query-8fb9130f18307639c52ce99f8128b10141e667374da3e4eed96d5f56b1651051.json  query-9179ab2e07a20167191af4d7a505ad61aec8fe8c9c02399a83a01ac1dde9ae0c.json  query-947892aaa4ddc23fa2e7a0bf065c2bf3ea374236da4010fe43fac814b18c6058.json  query-952f70de82e7885f487a7f0cc1968e6f91b5cbfd48408704f17ccf62527a6266.json  query-95ba53a0e0e06046b980b19881c18e8323d66c27354a6c5953141211c7c21397.json  query-a1be0c6ab059117875cd0e99b2de73e1b2ce942b4ccd36f4c85fa4555916474f.json  (+14 more)
hooks/: pre-commit
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
migrations/: 001_create_backup_metadata.sql  001_initial_schema.sql  002_add_deleted_at.sql  002_add_unpaid_status.sql  002_create_pin_requests.sql  002_drop_deleted_at.sql  002_pin_requests_provider_split.sql  002_tokens_normalization.sql  003_add_pin_on_ipfs.sql  003_subresource_deleted_at.sql  003_update_storage_mode_values.sql  004_create_pinned_tokens.sql  004_error_logs_split.sql  004_rename_jobs_to_tasks.sql  005_move_status_fatal_to_archive.sql  005_rename_to_protection_jobs.sql  006_create_backup_requests.sql  006_rename_pin_status.sql  007_add_task_id_to_pin_requests.sql  007_restructure_ipfs_tables.sql
scripts/: extract_gallery_tokens.py  restart.sh  start-postgres.sh  start.sh  start_caddy.sh  stop-postgres.sh  stop.sh
src/: api.rs  backup.rs  cli.rs  config.rs  content.rs  ethereum.rs  lib.rs  logging.rs  main.rs  prune.rs  server.rs  size.rs  tezos.rs  types.rs  url.rs
src/chain/: common.rs  cryptopunks.json  ethereum.rs  evm.rs  mod.rs  tezos.rs
src/cli/: config.rs  mod.rs  x402.rs
src/cli/commands/: create.rs
src/content/: extensions.rs  extra.rs  html.rs  mod.rs  url.rs
src/content/extra/: croquet.rs  fisherman.rs  mod.rs
src/envvar/: mod.rs
src/hashing/: mod.rs
src/httpclient/: fetch.rs  mod.rs  retry.rs  stream.rs
src/ipfs/: client.rs  config.rs  mod.rs  pinata.rs  pinning_service.rs  provider.rs  types.rs  url.rs
src/logging/: mod.rs
src/prune/: mod.rs
src/server/: api.rs  config.rs  database_trait.rs  db.rs  handle_backup.rs  handle_backup_delete.rs  handle_backup_retry.rs  handle_backups.rs  handle_download.rs  handle_error_log.rs  handle_status.rs  mod.rs  pin_monitor.rs  privy.rs  pruner.rs  router.rs  workers.rs
src/server/archive/: mod.rs
src/server/auth/: jwt.rs  mod.rs
src/server/database/: mod.rs  trait.rs
src/server/handlers/: handle_archive_download.rs  handle_backup.rs  handle_backup_create.rs  handle_backup_delete.rs  handle_backup_delete_archive.rs  handle_backup_delete_pins.rs  (+10 more)
src/url/: mod.rs
supply-chain/: config.toml
(+25 files in other folders)
