[package]
name = "nftbk"
version = "0.1.0"
edition = "2021"
description = "A library, server, and CLI tool for backing up NFT metadata and content from EVM and Tezos NFT contracts."
build = "build.rs"

[lib]
name = "nftbk"
path = "src/lib.rs"

[[bin]]
name = "nftbk-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "nftbk-server"
path = "src/bin/server.rs"

[dependencies]
alloy = { version = "1.0.7", features = ["full"] }
alloy-contract = { version = "1.0.7" }
alloy-sol-types = "1.0.7"
anyhow = "1.0"
async-compression = { version = "0.4", features = ["tokio", "futures-io", "gzip"] }
async-trait = "0.1.88"
axum = "0.8"
base64 = "0.21"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.3", features = ["derive", "env"] }
ctrlc = "3"
dotenv = "0.15"
flate2 = "1.0"
fs2 = "0.4"
futures = "0.3"
futures-util = "0.3"
hex = "0.4.3"
httpdate = "1.0"
hyper = { version = "1.0", features = ["full"] }
josekit = "0.10.3"
libc = "0.2"
prettytable = "0.10"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
scraper = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json"] }
subtle = "2"
tar = "0.4"
tezos-contract = { git = "https://github.com/0xmichalis/tezos-rust-sdk" }
tezos-core = { git = "https://github.com/0xmichalis/tezos-rust-sdk", features = ["full_crypto"] }
tezos-michelson = { git = "https://github.com/0xmichalis/tezos-rust-sdk" }
tezos-rpc = { git = "https://github.com/0xmichalis/tezos-rust-sdk" }
time = { version = "0.3", features = ["macros", "formatting"] }
tokio = { version = "1.28", features = ["full"] }
tokio-util = "0.7"
toml = "0.7"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
url = "2.4"
urlencoding = "2.1"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1.4", features = ["v4"] }
x402-axum = { git = "https://github.com/0xmichalis/x402-rs", branch = "dynamic-resolver", package = "x402-axum" }
x402-rs = { version = "0.9" }
zip = "0.6"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
p256 = { version = "0.13", features = ["pkcs8"] }
pkcs8 = "0.10"
rand_core = "0.6"
tempfile = "3.8"
tokio-test = "0.4"
wiremock = "0.5"
